[feat] Add feature to add new employment history - Include swagger documentation for the new endpoint - Have controllers and unit tests for the endpoint
